[ML] Fixing dropdown button layout (#1023)
Fixes layout issues in Anomaly Explorer and Single Metric Viewer caused by #1022 where buttons are being used as dropdown menus.

--- a/plugins/ml/public/components/anomalies_table/styles/main.less
+++ b/plugins/ml/public/components/anomalies_table/styles/main.less
@@ -76,13 +76,23 @@ ml-anomalies-table {
       }
     }
 
+    .kuiButtonGroup {
+      position: relative;
+      display: inline-block;
+      vertical-align: middle;
+    }
+
     .kuiButton.dropdown-toggle,
     .open > .dropdown-toggle.kuiButton--primary:hover,
     .open > .dropdown-toggle.kuiButton--primary:focus {
       background: transparent;
       border: none;
-      color: #444444;
+      color: #444444 !important;
       padding: 0px 50px 0px 0px;
+      transform: none;
+      outline: none;
+      box-shadow: none !important;
+      height: 17px;
     }
 
     .dropdown-menu {
