--- a/plugins/ml/public/explorer/styles/main.less
+++ b/plugins/ml/public/explorer/styles/main.less
@@ -63,6 +63,8 @@
 
     .kuiButtonGroup {
       padding: 0px 5px 0px 0px;
+      position: relative;
+      display: inline-block;
     }
 
     button.dropdown-toggle {
